tests/error/polar_invalid_ph.gw
// [contains] in phase component of polar value...
 %(0, NULL);
